name:                machines-gpubsub-source
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/machines-gpubsub-source#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Machine.Source.Google.PubSub
  build-depends:       base >= 4.7 && < 5,
                       base64-bytestring >= 1.0 && < 2,
                       bytestring >= 0.10 && < 1,
                       gogol >= 0.3 && < 1,
                       gogol-pubsub >= 0.3 && < 1,
                       lens >= 4.15 && < 5,
                       machines >= 0.6 && < 1,
                       mtl >= 2.2 && < 3,
                       resourcet >= 1.1 && < 2,
                       text >= 1.2 && < 2
  default-language:    Haskell2010

test-suite machines-gpubsub-source-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , machines-gpubsub-source
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/machines-gpubsub-source
